--- a/recipes/scrap-recipes.ipynb
+++ b/recipes/scrap-recipes.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "8f2a2ed2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "import time\n",
@@ -17,13 +20,14 @@
     "from selenium.common.exceptions import ElementClickInterceptedException\n",
     "from selenium.common.exceptions import StaleElementReferenceException\n",
     "from selenium.webdriver.support.ui import Select"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "39070447",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# ! pkill -f \"(chrome)?(--headless)\"\n",
     "url = \"https://www.allrecipes.com/recipes/14485/healthy-recipes/main-dishes/chicken/?page=2\"\n",
@@ -33,20 +37,22 @@
     "opts.headless =True\n",
     "driver = Chrome(options=opts)\n",
     "driver.get(url)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "d656b85e",
+   "metadata": {},
    "source": [
     "# Checken scraping"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e419d30",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "all_links = []\n",
     "def url_grabber(driver):\n",
@@ -84,13 +90,14 @@
     "         \n",
     "        \n",
     "    return all_links"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bbe82985",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "result = url_grabber(driver)\n",
     "df = pd.DataFrame(result).T\n",
@@ -98,20 +105,22 @@
     "df.columns = names\n",
     "df.to_csv('chicken_urls.csv', index=False, header=True)\n",
     "df"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "eeaa72e6",
+   "metadata": {},
    "source": [
     "# Desserts scraping"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "c403fc0b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "import pandas as pd\n",
@@ -170,34 +179,37 @@
     "         \n",
     "        \n",
     "    return  all_links"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e888e3c9",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "result = url_grabber(driver)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "4c62b940",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(result).T\n",
     "names = [f'page-{i}' for i in range(2,len(result)+2)]\n",
     "df.columns = names\n",
     "# df.to_csv('chicken_urls.csv', index=False, header=True)\n",
     "df.to_csv('/home/zelalem/my_repos/mygithubrepos/vacation-projects/recipes/dessert_urls.csv', index=False, header=True)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "9db6c2f3211b22e1d93f2ef839b44c464eb8109607c33cab815306a7c9e8bfd9"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
